@startuml

' Diagrama de clases para el sistema de ciberseguridad basado en el modelo Kimball

class Dispositivo {
  +id: Integer
  +nombre: String
  +ip: String
}

class Usuario {
  +id: Integer
  +nombre: String
  +rol: String
}

class TipoIncidente {
  +id: Integer
  +tipo: String
}

class Incidente {
  +id: Integer
  +fecha: Date
  +severidad: Integer
  +es_critico(): Boolean
}

' Relaciones entre las clases (modelo de estrella)
Dispositivo "1" -- "0..*" Incidente : "Dispositivo Asociado"
Usuario "1" -- "0..*" Incidente : "Usuario Asociado"
TipoIncidente "1" -- "0..*" Incidente : "Tipo de Incidente"
Incidente "0..*" -- "*" Dispositivo : "Involucra Dispositivo"
Incidente "0..*" -- "*" Usuario : "Involucra Usuario"
Incidente "0..*" -- "*" TipoIncidente : "Involucra Tipo"

@enduml
